# blockchain-blocks

./: Cargo.toml  README.md  settings.gradle.kts
lib/: build.gradle.kts
lib/src/main/cpp/: hello.cpp
lib/src/main/public/: blockchain-blocks.h
lib/src/test/cpp/: hello_test.cpp
src/: blocks.rs  io.rs  lib.rs
